--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 #main {
     background-color: #23235B;
 	box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
-	padding: 20px;
-	width: 350px;
-	max-width: 100%;
+    padding: 20px;
+    width: 350px;
+    max-width: 100%;
+    margin-top: 10rem;
 }
 
 #prompt-length {
