--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,25 @@
 #main {
     background-color: #23235B;
-	box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
     padding: 20px;
     width: 350px;
     max-width: 100%;
     margin-top: 10rem;
+}
+
+h5 {
+    text-align: center;
+}
+
+#lengthError {
+    text-align: end;
+}
+
+.form-check {
+    display: flex;
+	justify-content: space-between;
+	/* align-items: center; */
+	margin: 15px 0;
 }
 
 #prompt-length {
